--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,35 +5,23 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondologin"
+    android:background="@drawable/fondologin1"
     tools:context="com.example.juan.foodapp.controlador.LoginActivity">
 
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="@string/main.btnLogin.hint"
-        android:layout_below="@+id/userPass"
-        android:layout_centerHorizontal="true"
-        style="@style/Widget.AppCompat.Button"
-        android:text="Ingresar" />
-
     <EditText
-        android:id="@+id/userPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="62dp"
+        android:inputType="textPersonName"
         android:ems="10"
-        android:fontFamily="sans-serif"
-        android:hint="@string/main.userPass.hint"
-        android:inputType="textPassword"
+        android:layout_marginTop="56dp"
+        android:id="@+id/userId"
         android:textColor="@color/white"
-        android:textAlignment="center"
         android:layout_alignTop="@+id/userName"
         android:layout_alignLeft="@+id/userName"
         android:layout_alignStart="@+id/userName"
+        android:textAlignment="center"
+        android:hint="ID"
         style="@android:style/Widget.DeviceDefault.EditText" />
 
     <EditText
@@ -41,12 +29,55 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
+        android:layout_marginBottom="66dp"
         android:id="@+id/userName"
-        android:layout_marginBottom="236dp"
-        android:layout_alignParentBottom="true"
+        android:textColor="@color/white"
+        android:layout_above="@+id/userMail"
         android:layout_centerHorizontal="true"
-        android:hint="Usuario Mares"
         android:textAlignment="center"
+        android:hint="Nombre"
         style="@android:style/Widget.DeviceDefault.EditText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/userMail"
+        android:layout_marginBottom="12dp"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:hint="Correo electrónico"
+        style="@android:style/Widget.DeviceDefault.EditText"
+        android:layout_above="@+id/userTeacher"
+        android:layout_alignLeft="@+id/userId"
+        android:layout_alignStart="@+id/userId" />
+
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/main.btnLogin.hint"
+        style="@style/Widget.AppCompat.Button"
+        android:text="Ingresar"
+        android:layout_marginBottom="33dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_marginBottom="21dp"
+        android:id="@+id/userTeacher"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:hint="Profesor"
+        style="@android:style/Widget.DeviceDefault.EditText"
+        android:layout_above="@+id/btnLogin"
+        android:layout_alignLeft="@+id/userMail"
+        android:layout_alignStart="@+id/userMail" />
+
 
 </RelativeLayout>
