--- a/app/src/main/res/layout/header_expandable_transferencia_tanque.xml
+++ b/app/src/main/res/layout/header_expandable_transferencia_tanque.xml
@@ -6,7 +6,7 @@
     android:padding="5dp" >
 
     <TextView
-        android:id="@+id/header_transfer"
+        android:id="@+id/header_transferencia_tanque"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
