--- a/app/src/main/res/layout/activity_transferencia_tanque.xml
+++ b/app/src/main/res/layout/activity_transferencia_tanque.xml
@@ -16,8 +16,9 @@
         android:layout_width="fill_parent"
         android:layout_height="393dp"
         android:divider="#000000"
-        android:layout_marginBottom="150dp"
-        android:dividerHeight="1dp" >
+        android:dividerHeight="1dp"
+        android:layout_above="@+id/btnTransferenciaTanque"
+        android:layout_alignParentTop="true">
     </ExpandableListView>
 
     <Button
@@ -28,7 +29,6 @@
         android:text="Ingresar"
         android:layout_weight="0.13"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="49dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
