--- a/app/src/main/res/layout/child_1_transferencia_placas.xml
+++ b/app/src/main/res/layout/child_1_transferencia_placas.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/child_transfer1"
         android:padding="10dp"
-        android:layout_width="fill_parent"
+        android:layout_width="162dp"
         android:layout_height="wrap_content"
         android:text="Temperatura del alimento a la entrada de la sección.(°C)"
         android:textColor="@color/white"
@@ -18,45 +18,73 @@
         android:textSize="13sp"
         />
     <!--android:layout_marginLeft="20dp"-->
-    <EditText android:layout_width="wrap_content"
-        android:id="@+id/campo1"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:inputType="number"
-        android:width="150dp"/>
 
     <TextView
         android:id="@+id/child_transfer2"
         android:padding="10dp"
-        android:layout_width="fill_parent"
+        android:layout_width="164dp"
         android:layout_height="wrap_content"
         android:text="Caudal correspondiente a la entrada del alimento a la zona. (L/s)"
         android:textColor="@color/white"
         android:textColorLink="@color/colorPrimary"
         android:textSize="13sp"
-        />
-    <EditText android:layout_width="wrap_content"
-        android:id="@+id/campo2"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:inputType="number"
-        android:width="150dp"/>
+        android:layout_below="@+id/child_transfer1"
+        android:layout_alignRight="@+id/child_transfer1"
+        android:layout_alignEnd="@+id/child_transfer1" />
 
     <TextView
         android:id="@+id/child_transfer3"
         android:padding="10dp"
-        android:layout_width="fill_parent"
+        android:layout_width="167dp"
         android:layout_height="wrap_content"
         android:text="Coeficiente de incrustación para el fluido frío."
         android:textColor="@color/white"
         android:textColorLink="@color/colorPrimary"
         android:textSize="13sp"
-        />
+        android:layout_below="@+id/child_transfer2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/child_transfer2"
+        android:layout_alignEnd="@+id/child_transfer2" />
+
+
+
     <EditText android:layout_width="wrap_content"
-        android:id="@+id/campo3"
+        android:id="@+id/campo1"
+        android:layout_height="match_parent"
+        android:textColor="@color/white"
+        android:inputType="number|numberDecimal"
+        android:width="150dp"
+        android:layout_row="0"
+        android:layout_column="1"
+        android:layout_marginLeft="36dp"
+        android:layout_marginStart="36dp"
+        android:layout_above="@+id/child_transfer2"
+        android:layout_toRightOf="@+id/child_transfer3"
+        android:layout_toEndOf="@+id/child_transfer3" />
+
+    <EditText android:layout_width="wrap_content"
+        android:id="@+id/campo2"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:inputType="number"
-        android:width="150dp"/>
+        android:inputType="number|numberDecimal"
+        android:width="150dp"
+        android:layout_row="1"
+        android:layout_column="1"
+        android:layout_below="@+id/campo1"
+        android:layout_alignLeft="@+id/campo1"
+        android:layout_alignStart="@+id/campo1"
+        android:layout_above="@+id/child_transfer3" />
 
-</LinearLayout>
+    <EditText android:layout_width="wrap_content"
+        android:id="@+id/campo3"
+        android:layout_height="67dp"
+        android:layout_marginLeft="197dp"
+        android:textColor="@color/white"
+        android:inputType="number|numberDecimal"
+        android:width="150dp"
+        android:layout_alignLeft="@+id/child_transfer3"
+        android:layout_alignStart="@+id/child_transfer2"
+        android:layout_below="@+id/campo2" />
+
+</RelativeLayout>
