--- a/app/src/main/res/layout/child_2_transferencia_tanque.xml
+++ b/app/src/main/res/layout/child_2_transferencia_tanque.xml
@@ -12,7 +12,7 @@
         android:padding="8dp"
         android:layout_width="182dp"
         android:layout_height="wrap_content"
-        android:text="Altura Producto:"
+        android:text="Altura Producto (m):"
         android:textColor="@color/white"
         android:textColorLink="@color/colorPrimary"
          />
@@ -35,7 +35,7 @@
         android:padding="8dp"
         android:layout_width="152dp"
         android:layout_height="wrap_content"
-        android:text="Espesor:"
+        android:text="Espesor (m):"
         android:textColor="@color/white"
         android:textColorLink="@color/colorPrimary"
         android:layout_row="1"
