--- a/app/src/main/res/layout/child_6_transferencia_tanque.xml
+++ b/app/src/main/res/layout/child_6_transferencia_tanque.xml
@@ -8,36 +8,39 @@
 
 
     <TextView
-        android:id="@+id/child_transfer1"
+        android:id="@+id/child_transfer8"
         android:padding="8dp"
         android:layout_width="152dp"
+        android:layout_marginTop="-10dp"
         android:layout_height="wrap_content"
-        android:text="Tipo de Agitador:"
+        android:text="Temperatura de entrada (°C):"
         android:textColor="@color/white"
         android:textColorLink="@color/colorPrimary"
          />
 
     <EditText
         android:layout_width="120dp"
-        android:layout_height="wrap_content"
+        android:layout_height="58dp"
         android:inputType="number|numberDecimal"
         android:ems="10"
         android:layout_marginRight="152dp"
         android:layout_marginEnd="152dp"
-        android:id="@+id/espesor"
-        android:layout_row="1"
+        android:id="@+id/tempEntra"
+        android:layout_row="0"
         android:layout_column="1"
         style="@style/Widget.AppCompat.EditText"
-        android:hint="Ej. 0,24" />
+        android:hint="Ej. 0,24"
+        android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/child_transfer3"
+        android:id="@+id/child_transfer10"
         android:padding="8dp"
         android:layout_width="152dp"
         android:layout_height="wrap_content"
-        android:text="Diámetro (m):"
+        android:text="Flujo másico:"
         android:textColor="@color/white"
         android:textColorLink="@color/colorPrimary"
+        android:layout_marginTop="-2dp"
         android:layout_row="2"
         android:layout_column="0" />
 
@@ -48,29 +51,36 @@
         android:ems="10"
         android:layout_marginRight="152dp"
         android:layout_marginEnd="152dp"
-        android:id="@+id/diametroInterno"
+        android:id="@+id/flujoMasico"
         android:layout_row="2"
         android:layout_column="1"
         style="@style/Widget.AppCompat.EditText"
         android:hint="Ej. 0,500" />
 
     <TextView
-        android:id="@+id/child_transfer2"
+        android:id="@+id/child_transfer9"
         android:padding="8dp"
+        android:layout_marginTop="-10dp"
         android:layout_width="152dp"
         android:layout_height="wrap_content"
-        android:text="Altura (m):"
+        android:text="Temperatura de entrada (°C):"
         android:textColor="@color/white"
         android:textColorLink="@color/colorPrimary"
         android:layout_row="1"
         android:layout_column="0" />
 
-    <Spinner
-        android:layout_width="129dp"
+    <EditText
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner_agitador"
-        android:layout_row="0"
-        android:layout_column="1" />
+        android:inputType="number|numberDecimal"
+        android:ems="10"
+        android:layout_marginRight="152dp"
+        android:layout_marginEnd="152dp"
+        android:id="@+id/tempSale"
+        android:layout_row="1"
+        android:layout_column="1"
+        style="@style/Widget.AppCompat.EditText"
+        android:hint="Ej. 0,24" />
 
 
     <!-- <TextView
