--- a/app/src/main/res/layout/activity_transferencia_placas.xml
+++ b/app/src/main/res/layout/activity_transferencia_placas.xml
@@ -19,16 +19,16 @@
         android:layout_height="393dp"
         android:divider="#000000"
         android:dividerHeight="1dp"
-        android:layout_above="@+id/btnTransferenciaPlacas"
+        android:layout_above="@+id/btnCalculoPlacas"
         android:layout_alignParentTop="true">
     </ExpandableListView>
 
     <Button
-        android:id="@+id/btnTransferenciaPlacas"
+        android:id="@+id/btnCalculoPlacas"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         style="@style/Widget.AppCompat.Button"
-        android:text="Ingresar"
+        android:text="Realizar Calculos"
         android:layout_weight="0.13"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
