configuraciones hechas en el lis

--- a/app/src/main/res/layout/activity_guia_practica.xml
+++ b/app/src/main/res/layout/activity_guia_practica.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".controlador.VisualizacionGuia">
+    android:layout_height="match_parent">
 
     <com.github.barteksc.pdfviewer.PDFView
         android:layout_width="match_parent"
