--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,7 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".controlador.TransferenciaPlacasActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".controlador.TransferenciaPlacasActivity">
     <item android:id="@+id/generaInforme" android:title="@string/Generar"
-        android:orderInCategory="100"  />
+        android:orderInCategory="100" />
     <item android:id="@+id/verGuia" android:title="Ver guía"
-        android:orderInCategory="100"  />
+        android:orderInCategory="100" />
 </menu>
